[project]
name = "lsk-quiz"
version = "0.1.0"
description = "Quiz API system"
authors = [
    {name = "LSK",email = "lee-seulki@naver.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
packages = [{include = "app"}]
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=5.2.1,<6.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "DATABASE_URL=postgresql://postgres:rlgns88@localhost:5432/lsk_quiz",
    "SECRET_KEY=caed8a95b304e4afe223de3e50806122bb8e59ebb3af1f27118bd5266125f7c0",
    "DEBUG=True"
]